[tool.poetry]
name = "cumulus-port"
version = "0.1.0"
description = "A python port of core cumulus functions"
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.9"

# Required
jsonpath-ng = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
pythonpath="."

[tool.isort]
profile = "black"
