[tool.poetry]
name = "cumulus-port"
version = "0.1.1"
description = "A python port of core cumulus functions"
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.9"

# Required
jsonpath-ng = "^1.4.0"

# Optional
boto3 = { version = "^1.0.0", optional = true }
botocore = { version = "*", optional = true }
cryptography = { version = ">=35.0.0", optional = true }
pyjwt = { version = "^2.0.0", optional = true }
requests = { version = "^2.4.2", optional = true }

[tool.poetry.extras]
all = ["boto3", "botocore", "cryptography", "pyjwt", "requests"]
auth = ["boto3", "botocore", "cryptography", "pyjwt", "requests"]

[tool.poetry.group.dev.dependencies]
moto = "^5.0.18"
pytest = "^8.0.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
pythonpath="."
markers = [
    "auth: requires the 'auth' extra to be installed",
]

[tool.isort]
profile = "black"
